src/app/components/listing/listing.component.css
/**
 * Copyright 2022 janwillem
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *     http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


.main{
    display: inline-flex;
    margin: 0px 0px 20px 0px;
    box-shadow: rgba(25, 25, 25, 0.04) 0 0 1px 0, rgba(0, 0, 0, 0.1) 0 3px 4px 0px;
    background-color: white;
    width: calc(100% - 12px);
    border-radius: 6px;
    align-items: center;
    padding: 0px;
    
    /* padding: 0px 20px; */
}
#profile{
    display: block;
    flex-flow: row;
    position: relative;

}


#feature-mark{
    background-color: hsl(180, 29%, 50%);
    width: 5px;
    position: absolute;
    top: 0px;
    height: 100%;
    border-radius: 6px 0px 0px 6px;
}

#profile-image{
    margin: 6px;
    margin-left: 12px;
}

#emblems-row{
    display: flex;
    flex-flow: row;
    align-items: center;
    margin-bottom: 6px;
}

.emblem{
    color: white;
    margin-left: 12px;
    border-radius: 18px;
    padding: 6px;
    font-weight: 700;
}

#company{
    font-weight: bold;
    color: hsl(180, 29%, 50%);
}

#position{
    font-weight: bold;
    color: hsl(180, 29%, 50%);
    font-size: 20px;
    margin-bottom: 6px;
}

#sub{
    color: hsl(180, 8%, 52%);
}



div.spacer{
    flex-grow:1;
}

div.selectors{
    display: flex;
    flex-flow: row;
    /* align-content: flex-end; */
}

div.selectors > *{
    padding-left: 10px;
    padding-right: 10px;

}

p{
    margin: 0px;
    padding: 0px;
}

